# floc

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/floc/: cli.py  cluster.py  io_ops.py  qc.py  sm_ops.py
src/floc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
