[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floc"
version = "1.0.0"
description = "Genomic clustering tool for population-level surveillance"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Jared Johnson", email = "jared.johnson@doh.wa.gov"}]

dependencies = [
  "numpy>=1.26.4",
  "screed>=1.1,<1.2",
  "psutil>=5.9",
  "plotly>=5.20",
  "sourmash>=4.8,<5.0",
  "scikit-learn"
]

[project.scripts]
floc = "floc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]